[INFER] Fix copies too in fixDoubleTypes, bug 639567.