js/src/methodjit/FrameState.cpp
@@ -1664,34 +1664,32 @@ FrameState::ensureDouble(FrameEntry *fe)
         return;
     }
 
+    if (fe->isCopy())
+        fe = fe->copyOf();
+
     if (fe->isType(JSVAL_TYPE_DOUBLE))
         return;
 
-    FrameEntry *backing = fe;
-    if (fe->isCopy())
-        backing = fe->copyOf();
-
-    if (backing->isType(JSVAL_TYPE_DOUBLE)) {
-        /* The backing was converted to double already. */
-        fe->type.setConstant();
-        fe->knownType = JSVAL_TYPE_DOUBLE;
-        fe->typeSet = NULL;
-        return;
-    }
-
-    if (fe != backing) {
-        /* Forget this entry is a copy.  We are converting this entry, not the backing. */
-        fe->clear();
+    if (fe->isCopied()) {
+        /* Find and fixup the type for any copies of this entry. */
+        for (uint32 i = fe->trackerIndex() + 1; i < tracker.nentries; i++) {
+            FrameEntry *nfe = tracker[i];
+            if (nfe->isCopy() && nfe->copyOf() == fe) {
+                nfe->setType(JSVAL_TYPE_DOUBLE, NULL);
+                nfe->data.unsync();
+                nfe->type.unsync();
+            }
+        }
     }
 
     FPRegisterID fpreg = allocFPReg();
 
-    if (backing->isType(JSVAL_TYPE_INT32)) {
-        RegisterID data = tempRegForData(backing);
+    if (fe->isType(JSVAL_TYPE_INT32)) {
+        RegisterID data = tempRegForData(fe);
         masm.convertInt32ToDouble(data, fpreg);
     } else {
-        syncFe(backing);
-        masm.moveInt32OrDouble(addressOf(backing), fpreg);
+        syncFe(fe);
+        masm.moveInt32OrDouble(addressOf(fe), fpreg);
     }
 
     forgetAllRegs(fe);
@@ -1702,6 +1700,7 @@ FrameState::ensureDouble(FrameEntry *fe)
 
     fe->data.unsync();
     fe->type.unsync();
+
     return;
 }
 
